--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,30 @@
     width: 100%;
     min-height: 100vh;
 }
+.wrapper .nav{
+    color: white;
+    width: 100%;
+    background-color: tomato;
+    height: 60px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.wrapper .nav .nav_btn{
+    height: 100%;
+    color: white;
+    padding: 0 20px;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: tomato;
+
+    transition: 0.4s;
+    cursor: pointer;
+}
+.wrapper .nav .nav_btn:hover{
+    background-color: white;
+    color: tomato;
+}
 .wrapper .graph{
     width: 100%;
     height: 500px;
