--- a/style/style.css
+++ b/style/style.css
@@ -1,63 +1,63 @@
-*{
-    border: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
-.wrapper{
-    width: 100%;
-    min-height: 100vh;
+
+.wrapper {
+  width: 100%;
+  min-height: 100vh;
 }
-.wrapper .nav{
-    color: white;
-    width: 100%;
-    background-color: tomato;
-    height: 60px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.wrapper .nav {
+  color: white;
+  width: 100%;
+  background-color: tomato;
+  height: 60px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 .wrapper .nav .nav_div {
-    margin: 0 10px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  margin: 0 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.wrapper .nav .nav_div label{
-    font-size: 20px;
+.wrapper .nav .nav_div label {
+  font-size: 20px;
 }
-.wrapper .nav .nav_div input{
-    cursor: pointer;
+.wrapper .nav .nav_div input {
+  cursor: pointer;
 }
-.wrapper .nav .nav_btn{
-    height: 100%;
-    color: white;
-    padding: 0 20px;
-    font-size: 20px;
-    font-weight: 500;
-    background-color: tomato;
-
-    transition: 0.4s;
-    cursor: pointer;
+.wrapper .nav .nav_btn {
+  height: 100%;
+  color: white;
+  padding: 0 20px;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: tomato;
+  transition: 0.4s;
+  cursor: pointer;
 }
-.wrapper .nav .nav_btn:hover{
-    background-color: white;
-    color: tomato;
+.wrapper .nav .nav_btn:hover {
+  background-color: white;
+  color: tomato;
 }
-.wrapper .graph{
-    width: 100%;
-    height: 500px;
-    border-bottom: 2px solid black;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
+.wrapper .graph {
+  width: 100%;
+  height: 500px;
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
 }
-.wrapper .graph .item{
-    width: 5px;
-    background-color: black;   
+.wrapper .graph .item {
+  width: 5px;
+  background-color: black;
 }
-.wrapper .graph .item.compare{
-    background-color: red;
-}
+.wrapper .graph .item.compare {
+  background-color: red;
+}/*# sourceMappingURL=style.css.map */
