--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,7 @@
 }
 .wrapper .nav .nav_div input {
   cursor: pointer;
+  max-width: 200px;
 }
 .wrapper .nav .nav_div .disabled {
   background-color: rgb(255, 174, 160);
@@ -61,7 +62,7 @@
   align-items: flex-end;
 }
 .wrapper .graph .item {
-  width: 5px;
+  width: 4px;
   background-color: black;
 }
 .wrapper .graph .item.compare {
