--- a/style/style.css
+++ b/style/style.css
@@ -67,4 +67,23 @@
 }
 .wrapper .graph .item.compare {
   background-color: red;
+}
+.wrapper .info {
+  display: none;
+}
+@media screen and (max-width: 850px) {
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .wrapper .info {
+    display: block;
+  }
+  .wrapper .graph {
+    display: none;
+  }
+  .wrapper .nav {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
